--- a/Univibe/index.html
+++ b/Univibe/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html lang="en">
-  <head>
+  <head> 
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Univibe</title>
     <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-
   </head>
   <body>
     <div id="root"></div>
